--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -112,6 +112,18 @@
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <!-- place project specific Javascript in this file -->
         <script src="{% static 'js/project.js' %}"></script>
+
+        <script type="text/javascript">
+        $(function() {
+            // POSSIBILITA CLICAR NO ICONE DE QUALUQER CANPO DE DATETIME
+            $('div.input-append>span.add-on').click( 
+                function(){
+                    $('input[data-bootstrap-widget="datepicker"]', $(this).parent("div")[0]).focus();
+                }
+            );
+        });
+
+        </script>
     {% block extra_js %} {% endblock extra_js%}
     </body>
 </html>
