--- a/escolar/core/templates/base_adm.html
+++ b/escolar/core/templates/base_adm.html
@@ -9,7 +9,7 @@
 </ul>  -->
 
 <ul class="nav nav-tabs">
-    <li><a href="{% url 'escola_form' escola.pk %}" id='id_escola'>Escola</a></li>
+    <li><a href="{% url 'escola_cadastro' escola.pk %}" id='id_escola'>Escola</a></li>
     <li><a href="{% url 'usuarios_list' escola.id %}" id='id_usuarios'>Usuários</a></li>
     <li><a href="#" id='id_classes'>Classes</a></li>
     <li><a href="{% url 'professores_list' escola.pk %}" id='id_professores'>Professores</a></li>
