--- a/escolar/core/templates/core/usuarios_list.html
+++ b/escolar/core/templates/core/usuarios_list.html
@@ -14,11 +14,13 @@
   {% include "base_adm.html" %}
 
   <table class="table table-striped">
+    {% if can_edit %}
       <caption>
          <div style="float:right; margin-right:10px">
             <a href="{% url 'usuario_form' escola.pk %}" class="btn btn-mini btn-success">Novo Usuário</a>
          </div>
       </caption>
+    {% endif %}
       <thead>
         <tr>
             <th>Nome</th>
