--- a/escolar/escolas/templates/escolas/alunos_list.html
+++ b/escolar/escolas/templates/escolas/alunos_list.html
@@ -15,11 +15,13 @@
   {% include "base_adm.html" %}
 
   <table class="table table-striped">
+    {% if can_edit %}
       <caption>
          <div style="float:right; margin-right:10px">
             <a href="#" class="btn btn-mini btn-success">Novo Aluno</a>
          </div>
       </caption>
+    {% endif %}
       <thead>
         <tr>
             <th>Nome</th>
@@ -31,7 +33,11 @@
       <tbody>
       {% for aluno in alunos %}
         <tr>
-          <td><a href="#">{{ aluno.nome }}</a></td>
+          {% if can_edit or user.id == aluno.id %}
+            <td><a href="#">{{ aluno.nome }}</a></td>
+          {% else %}
+            <td>{{ aluno.nome }}</td>
+          {% endif %}
           <td>++</td>
           <td>++</td>
         </tr>
