--- a/escolar/escolas/templates/escolas/professores_list.html
+++ b/escolar/escolas/templates/escolas/professores_list.html
@@ -15,9 +15,11 @@
 
   <table class="table table-striped">
       <caption>
+      {% if can_edit %}
          <div style="float:right; margin-right:10px">
             <a href="#" class="btn btn-mini btn-success">Novo Professor</a>
          </div>
+      {% endif %}
       </caption>
       <thead>
         <tr>
@@ -30,7 +32,11 @@
       <tbody>
       {% for professor in professores %}
         <tr>
+        {% if can_edit or user.id == professor.id %}
           <td><a href="#">{{ professor.nome }}</a></td>
+        {% else %}
+          <td>{{ professor.nome }}</td>
+        {% endif %}
           <td>++</td>
           <td>++</td>
         </tr>
