ref #14 teste com menu em coluna lateral, como opção a tabs

--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -93,8 +93,10 @@
             {% block page_title %}
             {% endblock page_title %}
         </h3>
-    {% block content %}
-    {% endblock content %}
+    <div class="row-fluid">
+      {% block content %}
+      {% endblock content %}
+    </div>
 
     {% block footer %}
 <!--     <div class="container">
