--- a/escolar/escolas/templates/escolas/alunos_list.html
+++ b/escolar/escolas/templates/escolas/alunos_list.html
@@ -13,43 +13,44 @@
 <div class="container">
 
   {% include "base_adm.html" %}
+  <div class="row-fluid span10">
+    <table class="table table-striped">
+      {% if can_edit %}
+        <caption>
+           <div style="float:right; margin-right:10px">
+              <a href="#" class="btn btn-mini btn-success">Novo Aluno</a>
+           </div>
+        </caption>
+      {% endif %}
+        <thead>
+          <tr>
+              <th>Nome</th>
+              <th>Turmas</th>
+              <th>Status</th>
+          </tr>
+        </thead>
 
-  <table class="table table-striped">
-    {% if can_edit %}
-      <caption>
-         <div style="float:right; margin-right:10px">
-            <a href="#" class="btn btn-mini btn-success">Novo Aluno</a>
-         </div>
-      </caption>
-    {% endif %}
-      <thead>
+        <tbody>
+        {% for aluno in alunos %}
+          <tr>
+            {% if can_edit or user.id == aluno.id %}
+              <td><a href="#">{{ aluno.nome }}</a></td>
+            {% else %}
+              <td>{{ aluno.nome }}</td>
+            {% endif %}
+            <td>++</td>
+            <td>++</td>
+          </tr>
+        {% empty %}
         <tr>
-            <th>Nome</th>
-            <th>Turmas</th>
-            <th>Status</th>
+          <td>
+              Nenhum aluno encontrado
+          </td>
         </tr>
-      </thead>
-
-      <tbody>
-      {% for aluno in alunos %}
-        <tr>
-          {% if can_edit or user.id == aluno.id %}
-            <td><a href="#">{{ aluno.nome }}</a></td>
-          {% else %}
-            <td>{{ aluno.nome }}</td>
-          {% endif %}
-          <td>++</td>
-          <td>++</td>
-        </tr>
-      {% empty %}
-      <tr>
-        <td>
-            Nenhum aluno encontrado
-        </td>
-      </tr>
-      {% endfor %}
-      </tbody>
-  </table>
+        {% endfor %}
+        </tbody>
+    </table>
+  </div>
 </div>
 
 {% endblock content %}
