--- a/escolar/escolas/templates/escolas/escola_form.html
+++ b/escolar/escolas/templates/escolas/escola_form.html
@@ -16,38 +16,38 @@
 <div class="container">
    {% include "base_adm.html" %}
 
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="row-fluid">
-        <div class="controls cwell">
-            <div class="row-fluid">
-                {{ form.nome|as_bootstrap }}
-                {{ form.endereco|as_bootstrap }}
-                {{ form.numero|as_bootstrap }}
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="row-fluid span10">
+            <div class="controls cwell">
+                <div class="row-fluid">
+                    {{ form.nome|as_bootstrap }}
+                    {{ form.endereco|as_bootstrap }}
+                    {{ form.numero|as_bootstrap }}
+                </div>
+                <div class="row-fluid">
+                    {{ form.telefone|as_bootstrap }}
+                    {{ form.complemento|as_bootstrap }}
+                    {{ form.bairro|as_bootstrap }}
+                </div>
+                <div class="row-fluid">
+                    {{ form.slug|as_bootstrap }}
+                    {{ form.site|as_bootstrap }}
+                </div>
+                <div class="row-fluid">
+                    {{ form.description|as_bootstrap }}
+                </div>
             </div>
-            <div class="row-fluid">
-                {{ form.telefone|as_bootstrap }}
-                {{ form.complemento|as_bootstrap }}
-                {{ form.bairro|as_bootstrap }}
-            </div>
-            <div class="row-fluid">
-                {{ form.slug|as_bootstrap }}
-                {{ form.site|as_bootstrap }}
-            </div>
-            <div class="row-fluid">
-                {{ form.description|as_bootstrap }}
+            <div class="form-actions">
+                <input type="submit" value="Salvar" class="btn btn-primary">
+                {% if escola %}
+                    <a href="{% url 'escola_cadastro' escola.id %}" class="btn btn-secondary">Cancelar</a>
+                {% else %}
+                    <a href="{% url 'escolas_list' %}" class="btn btn-secondary">Cancelar</a>
+                {% endif%}
             </div>
         </div>
-        <div class="form-actions">
-            <input type="submit" value="Salvar" class="btn btn-primary">
-            {% if escola %}
-                <a href="{% url 'escola_cadastro' escola.id %}" class="btn btn-secondary">Cancelar</a>
-            {% else %}
-                <a href="{% url 'escolas_list' %}" class="btn btn-secondary">Cancelar</a>
-            {% endif%}
-        </div>
-    </div>
-</form>
+    </form>
 </div>
 {% endblock content %}
 
