--- a/escolar/escolas/templates/escolas/professores_list.html
+++ b/escolar/escolas/templates/escolas/professores_list.html
@@ -12,43 +12,44 @@
 <div class="container">
 
   {% include "base_adm.html" %}
-
-  <table class="table table-striped">
-      <caption>
-      {% if can_edit %}
-         <div style="float:right; margin-right:10px">
-            <a href="#" class="btn btn-mini btn-success">Novo Professor</a>
-         </div>
-      {% endif %}
-      </caption>
-      <thead>
-        <tr>
-            <th>Nome</th>
-            <th>Turmas</th>
-            <th>Status</th>
-        </tr>
-      </thead>
-
-      <tbody>
-      {% for professor in professores %}
-        <tr>
-        {% if can_edit or user.id == professor.id %}
-          <td><a href="#">{{ professor.nome }}</a></td>
-        {% else %}
-          <td>{{ professor.nome }}</td>
+  <div class="row-fluid span10">
+    <table class="table table-striped">
+        <caption>
+        {% if can_edit %}
+           <div style="float:right; margin-right:10px">
+              <a href="#" class="btn btn-mini btn-success">Novo Professor</a>
+           </div>
         {% endif %}
-          <td>++</td>
-          <td>++</td>
+        </caption>
+        <thead>
+          <tr>
+              <th>Nome</th>
+              <th>Turmas</th>
+              <th>Status</th>
+          </tr>
+        </thead>
+
+        <tbody>
+        {% for professor in professores %}
+          <tr>
+          {% if can_edit or user.id == professor.id %}
+            <td><a href="#">{{ professor.nome }}</a></td>
+          {% else %}
+            <td>{{ professor.nome }}</td>
+          {% endif %}
+            <td>++</td>
+            <td>++</td>
+          </tr>
+        {% empty %}
+        <tr>
+          <td>
+              Nenhum professor encontrado
+          </td>
         </tr>
-      {% empty %}
-      <tr>
-        <td>
-            Nenhum professor encontrado
-        </td>
-      </tr>
-      {% endfor %}
-      </tbody>
-  </table>
+        {% endfor %}
+        </tbody>
+    </table>
+  </div>
 </div>
 
 {% endblock content %}
