--- a/escolar/escolas/templates/escolas/aluno_form.html
+++ b/escolar/escolas/templates/escolas/aluno_form.html
@@ -1,26 +1,38 @@
 {% extends "base.html" %}
 
 {% load bootstrap_toolkit %}
+{% block page_title %}
+    {% if escola %}
+        Cadastro de Alunos / Escola: {{ escola.nome }}
+    {% else %}
+       Cadastro de Usuários
+    {% endif %}
+{% endblock page_title %}
+
 
 {% block content %}
-
 <div class="container">
-   {% include "base_adm.html" %}
-
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="row-fluid">
-        <div class="controls cwell">
+   
+  {% include "base_adm.html" %}
+    <div class="row-fluid span10">
+        Nome: {{ aluno.nome }}<br>
+        Email: {{ aluno.email }}<br>
+        Data de ingresso na Escola: {{ form.instance.date_joined|date:"d/m/Y" }}
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
             <div class="row-fluid">
-                {{ form.name|as_bootstrap }}
+                <div class="controls cwell">
+                    <div class="row-fluid">
+                    {{ form.ativo|as_bootstrap }}
+                    </div>
+                </div>
+                <div class="form-actions">
+                    <input type="submit" value="Salvar" class="btn btn-primary">
+                    <a href="{% url 'alunos_list' escola.id %}" class="btn btn-secondary">Cancelar</a>
+                </div>
             </div>
-        </div>
-        <div class="form-actions">
-            <input type="submit" value="Salvar" class="btn btn-primary">
-            <a href="{% url 'grupos_list' %}" class="btn btn-secondary">Cancelar</a>
-        </div>
+        </form>
     </div>
-</form>
 </div>
 {% endblock content %}
 
