--- a/escolar/escolas/templates/escolas/professores_list.html
+++ b/escolar/escolas/templates/escolas/professores_list.html
@@ -14,14 +14,7 @@
   {% include "base_adm.html" %}
   <div class="row-fluid span10">
     <table class="table table-striped">
-        <caption>
-        {% if can_edit %}
-           <div style="float:right; margin-right:10px">
-              <a href="#" class="btn btn-mini btn-success">Novo Professor</a>
-           </div>
-        {% endif %}
-        </caption>
-        <thead>
+         <thead>
           <tr>
               <th>Nome</th>
               <th>Turmas</th>
@@ -33,7 +26,7 @@
         {% for professor in professores %}
           <tr>
           {% if can_edit or user.id == professor.id %}
-            <td><a href="#">{{ professor.nome }}</a></td>
+              <td><a href="{% url 'professor_form' escola.pk  professor.pk %}">{{ professor.nome }}</a></td>
           {% else %}
             <td>{{ professor.nome }}</td>
           {% endif %}
