--- a/escolar/core/templates/core/grupos_list.html
+++ b/escolar/core/templates/core/grupos_list.html
@@ -7,11 +7,13 @@
 <div class="container">
 
   <table class="table table-striped">
+    {% if can_edit %}
       <caption>
          <div style="float:right; margin-right:10px">
             <a href="{% url 'grupo_form' %}" class="btn btn-mini btn-success">Novo Grupo</a>
          </div>
       </caption>
+    {% endif %}
       <thead>
         <tr>
             <th>Grupo</th>
@@ -21,7 +23,11 @@
       <tbody>
       {% for grupo in grupos %}
         <tr>
+        {% if can_edit %}
           <td> <a href="{% url 'grupo_form' grupo.pk %}">{{ grupo.name }}</a></td>
+        {% else %}
+          <td>{{ grupo.name }}</td>
+        {% endif %}
         </tr>
       {% empty %}
             Nenhum grupo encontrado
