ref #20 lista os alunos da classe no form da classe; TODO: conferir se esá excluiundo corretamente os alunos já cadastrados em classes do mesmo 'ano'; Classe com aluno não pode ser editada

--- a/escolar/escolas/templates/escolas/classe_form.html
+++ b/escolar/escolas/templates/escolas/classe_form.html
@@ -33,9 +33,19 @@
                     <a href="{% url 'classes_list' escola.id %}" class="btn btn-secondary">Cancelar</a>
                 {% endif%}
             </div>
+        {% if classe %}
+            <h4>Alunos dessa classe:</h4>
+            <ul>
+                {% for aluno in classe.classealuno_set.all %}
+                <li>{{ aluno.aluno }}</li>
+                {% endfor %}
+            </ul>
+            
+        {% endif %}
         </div>
     </form>
 </div>
+
 {% endblock content %}
 
 {% block extra_js %}
