ref #20 lista o historico de classes do alunono seu cadastro; mostra a classe do ano corrente na listagem do aluno

--- a/escolar/escolas/templates/escolas/aluno_form.html
+++ b/escolar/escolas/templates/escolas/aluno_form.html
@@ -32,6 +32,15 @@
                 </div>
             </div>
         </form>
+         {% if classes %}
+            <h4>Histórico de classes:</h4>
+            <ul>
+                {% for classe_aluno in classes %}
+                <li>{{ classe_aluno.classe }}</li>
+                {% endfor %}
+            </ul>
+            
+        {% endif %}
     </div>
 </div>
 {% endblock content %}
