ref #20 mostra o status do aluno na listagem de alunos

--- a/escolar/escolas/templates/escolas/alunos_list.html
+++ b/escolar/escolas/templates/escolas/alunos_list.html
@@ -32,7 +32,7 @@
               <td>{{ aluno.nome }}</td>
             {% endif %}
             <td>{{ aluno.classe|default:'--' }}</td>
-            <td>++</td>
+            <td>{{ aluno.status|yesno:'matriculado,--' }}</td>
           </tr>
         {% empty %}
         <tr>
