ref #21 mostra a listagem de classes do Professor/ no ano corrente e o seu status na escola

--- a/escolar/escolas/templates/escolas/professores_list.html
+++ b/escolar/escolas/templates/escolas/professores_list.html
@@ -30,8 +30,14 @@
           {% else %}
             <td>{{ professor.nome }}</td>
           {% endif %}
-            <td>++</td>
-            <td>++</td>
+            <td>
+              <ul>
+              {% for prof_classe in professor.classes %}
+              <li>{{ prof_classe.classe|default:"--" }}</li>
+              {% endfor %}
+              </ul>
+            </td>
+            <td>{{ professor.status|yesno:'Ativo,--' }}</td>
           </tr>
         {% empty %}
         <tr>
