--- a/escolar/escolas/templates/escolas/autorizado_form.html
+++ b/escolar/escolas/templates/escolas/autorizado_form.html
@@ -17,6 +17,7 @@
    {% include "base_adm.html" %}
     <div class="row-fluid span10">
         Aluno: <b>{{ aluno.nome }}</b><br>
+        Classe: <b>{{ classe }}</b><br>
  
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
