ref #22 quem criou o 'autorizado' pode edita-lo, por enquanto pois o autorizado é assunto dos Responsáveis de alunos ainda não existem no sistema,

--- a/escolar/escolas/templates/escolas/autorizados_alunos_list.html
+++ b/escolar/escolas/templates/escolas/autorizados_alunos_list.html
@@ -27,7 +27,7 @@
         <tbody>
         {% for autorizado in autorizados %}
           <tr>
-            {% if can_edit or user.id == autorizado.id %}
+            {% if request.user == autorizado.responsavel %}
               <td><a href="#">{{ autorizado.autorizado.nome }}</a></td>
             {% else %}
               <td>{{ autorizado.autorizado.nome }}</td>
