ref #22 cria model Pais; é obrigatório como FK na Escola; no form de Autorizado se ´e BRA o documento de autorizado, passa a ser o CPF que é unique, assim como o email

--- a/escolar/escolas/templates/escolas/autorizado_form.html
+++ b/escolar/escolas/templates/escolas/autorizado_form.html
@@ -27,6 +27,7 @@
                         {{ form.nome|as_bootstrap }}
                         {{ form.email|as_bootstrap }}
                         {{ form.celular|as_bootstrap }}
+                        {{ form.documento|as_bootstrap }}
                     </div>
 
                 </div>
