--- a/escolar/escolas/templates/escolas/autorizado_form.html
+++ b/escolar/escolas/templates/escolas/autorizado_form.html
@@ -18,7 +18,7 @@
     <div class="row-fluid span10">
           {% include "base_aluno.html" %}
         Aluno: <b>{{ aluno.nome }}</b><br>
-        Classe: <b>{{ classe }}</b><br>
+        Classe: <b>{{ classe|default:"--" }}</b><br>
  
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
