--- a/escolar/escolas/templates/escolas/autorizados_do_aluno_list.html
+++ b/escolar/escolas/templates/escolas/autorizados_do_aluno_list.html
@@ -17,11 +17,13 @@
   <div class="row-fluid span10">
       {% include "base_aluno.html" %}
     <table class="table table-striped">
-            <caption>
+        {% if can_edit %}
+        <caption>
            <div style="float:right; margin-right:10px">
               <a href="{% url 'autorizado_form' escola.pk aluno.pk %}" class="btn btn-mini btn-success">Novo Autorizado</a>
            </div>
         </caption>
+        {% endif %}
         <thead>
           <tr>
               <th>Nome</th>
