--- a/escolar/escolas/templates/escolas/escola_form.html
+++ b/escolar/escolas/templates/escolas/escola_form.html
@@ -21,6 +21,7 @@
         <div class="row-fluid span10">
             <div class="controls cwell">
                 <div class="row-fluid">
+                    {{ form.pais|as_bootstrap }}
                     {{ form.nome|as_bootstrap }}
                     {{ form.endereco|as_bootstrap }}
                     {{ form.numero|as_bootstrap }}
@@ -33,6 +34,7 @@
                 <div class="row-fluid">
                     {{ form.slug|as_bootstrap }}
                     {{ form.site|as_bootstrap }}
+                    {{ form.logo|as_bootstrap }}
                 </div>
                 <div class="row-fluid">
                     {{ form.description|as_bootstrap }}
