--- a/escolar/core/templates/base.html
+++ b/escolar/core/templates/base.html
@@ -88,14 +88,16 @@
         </div>
       </div>
     </div>
-    <div class="span1{% if subsections %}0{% else %}2{% endif %}">
-        <h3>
-            {% block page_title %}
-            {% endblock page_title %}
-        </h3>
-    <div class="row-fluid">
-      {% block content %}
-      {% endblock content %}
+    <div class="container">
+        <div class="row-fluid">
+          <h3>
+              {% block page_title %}
+              {% endblock page_title %}
+          </h3>
+
+            {% block content %}
+            {% endblock content %}
+        </div>
     </div>
 
     {% block footer %}
