--- a/escolar/core/templates/core/grupo_form.html
+++ b/escolar/core/templates/core/grupo_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load bootstrap_toolkit %}
+{% load bootstrap3 %}
 {% block page_title %}Cadastro /Grupo{% endblock page_title %}
 
 {% block content %}
