--- a/escolar/escolas/templates/escolas/classe_professor_form.html
+++ b/escolar/escolas/templates/escolas/classe_professor_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
+{% load bootstrap3 %}
 
-{% load bootstrap_toolkit %}
 {% block page_title %}
     {% if escola %}
         Vinculação de Aluno a uma Classe / Escola: {{ escola.nome }}
